added in more stuff to the block and grids

--- a/static/css/main/style.less
+++ b/static/css/main/style.less
@@ -1,3 +1,14 @@
 body{
     
 }
+
+.block{
+    background-color: white;
+    margin: 2px;
+    float: left;
+    border: 1px solid black;
+}
+
+.block-row{
+    clear: both;
+}
