--- a/static/css/main/style.css
+++ b/static/css/main/style.css
@@ -27,7 +27,7 @@ h6 {
   height: 100vh;
   text-align: center;
   color: #f8f8f8;
-  background: url('../img/intro-bg-5.jpg') no-repeat center center;
+  background: url('../../icons/intro-bg-5.jpg') no-repeat center center;
   background-size: cover;
 }
 
