Added information container, and banner

--- a/static/css/main/style.css
+++ b/static/css/main/style.css
@@ -117,7 +117,7 @@ h6 {
 .banner {
   padding: 100px 0;
   color: #f8f8f8;
-  background: url(../img/intro-bg-2.jpg) no-repeat center center;
+  background: url(../../icons/intro-bg-2.jpg) no-repeat center center;
   background-size: cover;
 }
 
