--- a/static/css/main/style.less
+++ b/static/css/main/style.less
@@ -3,11 +3,9 @@ body{
 }
 
 .block{
-  background-color: white;
-  margin: 2px;
   float: left;
-  border: 1px solid black;
   text-align: center;
+  background: url(../../icons/tile.png);
 }
 
 .block-row{
