added source code and new tile images

--- a/static/css/main/style.less
+++ b/static/css/main/style.less
@@ -5,7 +5,7 @@ body{
 .block{
   float: left;
   text-align: center;
-  background: url(../../icons/tile.png);
+  background: url(../../icons/tile-2.jpg);
   background-size: cover;
 }
 
