--- a/static/css/main/style.less
+++ b/static/css/main/style.less
@@ -118,13 +118,13 @@ h6 {
 
 .section-heading-spacer {
   float: left;
-  width: 200px;
+  padding: 20px 0px 20px 0px
+  width: 300px;
   border-top: 3px solid #e7e7e7;
 }
 
-.section-heading-spacer-blank {
-  float: left;
-  width: 200px;
+.section-heading-spacer-blank{
+  .section-heading-spacer;
   border-top: 3px transparent;
 }
 
@@ -146,9 +146,11 @@ h6 {
 }
 
 .banner-social-buttons {
-  float: right;
+  float: center;
   margin-top: 0;
 }
+
+
 
 @media(max-width:1199px) {
   ul.banner-social-buttons {
