updated css to inlcude winnning block

--- a/static/css/main/style.less
+++ b/static/css/main/style.less
@@ -8,6 +8,10 @@
 .block-row{
   clear: both;
 }
+.winning-condition-block {
+  background: url(../../icons/tile.png);
+  background-size: cover;
+}
 .grid-border-top {
   background: url(../../icons/tile-top.jpg);
   background-size: cover;
@@ -231,4 +235,3 @@ footer {
 p.copyright {
   margin: 15px 0 0;
 }
-
