wrote a section on goal of game

--- a/static/css/main/style.less
+++ b/static/css/main/style.less
@@ -51,10 +51,6 @@ html {
   height: 100%;
 }
 
-.gird-no-border {
-
-}
-
 body,
 h1,
 h2,
@@ -87,7 +83,7 @@ h6 {
   padding-bottom: 10%;
 }
 
-.intro-message > h1 {
+.intro-message h1 {
   margin: 0;
   text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
   font-size: 5em;
@@ -100,9 +96,14 @@ h6 {
   border-bottom: 1px solid rgba(0,0,0,0.2);
 }
 
-.intro-message > h3 {
+.intro-message h3 {
   text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
   color:white;
+}
+
+.intro-message h4 {
+  text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
+  color: white;
 }
 
 
