--- a/static/css/main/style.less
+++ b/static/css/main/style.less
@@ -73,7 +73,7 @@ h6 {
   height: 100vh;
   text-align: center;
   color: #f8f8f8;
-  background: url('../../icons/intro-bg-1.jpg') no-repeat center center;
+  background: url('../../icons/intro-bg-1.png') no-repeat center center;
   background-size: cover;
 }
 
@@ -168,7 +168,7 @@ h6 {
 .banner {
   padding: 100px 0;
   color: #f8f8f8;
-  background: url(../../icons/intro-bg-2.jpg) no-repeat center center;
+  background: url(../../icons/intro-bg-2.png) no-repeat center center;
   background-size: cover;
 }
 .banner-message {
