changed game-container div class

--- a/static/css/main/style.less
+++ b/static/css/main/style.less
@@ -105,7 +105,10 @@ h6 {
   text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
   color: white;
 }
-
+.game-container {
+  padding: 0;
+  border-bottom: 1px solid #e7e7e7;
+}
 
 @media(max-width:767px) {
   .intro-message {
