--- a/static/css/main/style.less
+++ b/static/css/main/style.less
@@ -106,7 +106,9 @@ h6 {
   color: white;
 }
 .game-container {
-  padding: 0;
+  position: relative;
+  margin: 0 0 50px 0;
+  padding: 0 0 25px 0;
   border-bottom: 1px solid #e7e7e7;
 }
 
@@ -143,7 +145,6 @@ h6 {
 
 .content-section-a {
   padding: 50px 0;
-  background-color: #f8f8f8;
 }
 
 .content-section-b {
