--- a/static/css/main/style.less
+++ b/static/css/main/style.less
@@ -89,13 +89,6 @@ h6 {
   font-size: 5em;
   color: white;
 }
-
-.intro-divider {
-  width: 400px;
-  border-top: 1px solid #f8f8f8;
-  border-bottom: 1px solid rgba(0,0,0,0.2);
-}
-
 .intro-message h3 {
   text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
   color:white;
@@ -104,6 +97,15 @@ h6 {
 .intro-message h4 {
   text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
   color: white;
+}
+.intro-message h5 {
+  text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
+  color: white;
+}
+.intro-divider {
+  width: 400px;
+  border-top: 1px solid #f8f8f8;
+  border-bottom: 1px solid rgba(0,0,0,0.2);
 }
 .game-container {
   position: relative;
