--- a/static/css/main/style.less
+++ b/static/css/main/style.less
@@ -9,8 +9,8 @@
   clear: both;
 }
 .winning-condition-block {
-  background: url(../../icons/tile.png);
-  background-size: cover;
+  background: url(../../icons/tile.png) !important;
+  background-size: cover !important;
 }
 .grid-border-top {
   background: url(../../icons/tile-top.jpg);
