fixed basic dice movement

--- a/static/css/main/style.less
+++ b/static/css/main/style.less
@@ -18,11 +18,12 @@
 }
 
 .block.block-dice{
-    background: url(../../icons/Sprite/1-2.png) -300px;
+    // background: url(../../icons/Sprite/1-2.png) -300px;
     height: 75px !important;
     width: 75px !important;
-    .animation(rollDice);
+    // .animation(rollDice);
     position: relative;
+    margin: -10px 0 0 10px;
 }
 
 .block.block-dice.block-move-left{
