--- a/static/css/main/style.less
+++ b/static/css/main/style.less
@@ -10,7 +10,23 @@
 }
 
 .rollDice1To2{
-    .animation(rollDice1To2);
+    &.left{
+    .animation(rollDice1To2-left);
+
+    }
+    &.right{
+    .animation(rollDice1To2-right);
+
+    }
+    &.up{
+    .animation(rollDice1To2-up);
+
+    }
+    &.down{
+  .animation(rollDice1To2-down);
+      
+    }
+
 }
 
 .block{
