--- a/static/css/main/style.less
+++ b/static/css/main/style.less
@@ -24,7 +24,7 @@
     }
     &.down{
   .animation(rollDice1To2-down);
-      
+
     }
 
 }
@@ -100,6 +100,9 @@
 .grid-border-right {
   background: url(../../icons/tile-right.jpg);
   background-size: cover;
+}
+div#player {
+  position: relative;
 }
 
 body,
