added in the rotation effect

--- a/static/css/main/animation.less
+++ b/static/css/main/animation.less
@@ -1,4 +1,4 @@
-.animation (@name, @duration: 1s, @delay: 0, @ease: ease) {
+.animation (@name, @duration: 800ms, @delay: 0, @ease: ease) {
     -webkit-animation: @name @duration @delay @ease;
     -moz-animation:    @name @duration @delay @ease;
     -ms-animation:     @name @duration @delay @ease;
