--- a/static/css/main/style.less
+++ b/static/css/main/style.less
@@ -9,6 +9,17 @@
     -o-transform:        @string;
 }
 
+.rotate90{
+    .transform(rotate(90deg));
+}
+
+.rotate180{
+    .transform(rotate(180deg));
+}
+
+.rotate270{
+    .transform(rotate(270deg));
+}
 
 .block{
   float: left;
