added in dice layouts

--- a/static/css/main/animation.less
+++ b/static/css/main/animation.less
@@ -4,6 +4,25 @@
     -ms-animation:     @name @duration @delay @ease;
 }
 
+.transform(@string){
+    -webkit-transform: @string;
+    -moz-transform:      @string;
+    -ms-transform:       @string;
+    -o-transform:        @string;
+}
+
+.rotate90{
+    .transform(rotate(90deg));
+}
+
+.rotate180{
+    .transform(rotate(180deg));
+}
+
+.rotate270{
+    .transform(rotate(270deg));
+}
+
 
 .rollDice1To2 {
     &.left{
