--- a/static/css/main/style.less
+++ b/static/css/main/style.less
@@ -4,27 +4,59 @@
 
 
 
-.dice-face{
+.dice-face.dice-face-v1{
     width:75px !important;
     height: 75px;
     position:relative;
     &.face-1{
-        background: url(../../icons/Sprite/Dice-face/Dice-1.png);
+        background: url(../../icons/Sprite/Dice-face-1/Dice-1.png);
     }
     &.face-2{
-        background: url(../../icons/Sprite/Dice-face/Dice-2.png);
+        background: url(../../icons/Sprite/Dice-face-1/Dice-2.png);
     }
     &.face-3{
-        background: url(../../icons/Sprite/Dice-face/Dice-3.png);
+        background: url(../../icons/Sprite/Dice-face-1/Dice-3.png);
     }
     &.face-4{
-        background: url(../../icons/Sprite/Dice-face/Dice-4.png);
+        background: url(../../icons/Sprite/Dice-face-1/Dice-4.png);
     }
     &.face-5{
-        background: url(../../icons/Sprite/Dice-face/Dice-5.png);
+        background: url(../../icons/Sprite/Dice-face-1/Dice-5.png);
     }
     &.face-6{
-        background: url(../../icons/Sprite/Dice-face/Dice-6.png);
+        background: url(../../icons/Sprite/Dice-face-1/Dice-6.png);
+    }
+
+    &.front-face{
+        left: 75px;
+    }
+
+    &.back-face{
+        left: 75px;
+    }
+}
+
+.dice-face.dice-face-v2{
+    width:75px !important;
+    height: 75px;
+    position:relative;
+    &.face-1{
+        background: url(../../icons/Sprite/Dice-face-2/Dice-1.png);
+    }
+    &.face-2{
+        background: url(../../icons/Sprite/Dice-face-2/Dice-2.png);
+    }
+    &.face-3{
+        background: url(../../icons/Sprite/Dice-face-2/Dice-3.png);
+    }
+    &.face-4{
+        background: url(../../icons/Sprite/Dice-face-2/Dice-4.png);
+    }
+    &.face-5{
+        background: url(../../icons/Sprite/Dice-face-2/Dice-5.png);
+    }
+    &.face-6{
+        background: url(../../icons/Sprite/Dice-face-2/Dice-6.png);
     }
 
     &.front-face{
