--- a/static/css/main/style.less
+++ b/static/css/main/style.less
@@ -312,10 +312,14 @@ h6 {
 }
 
 footer {
-  padding: 50px 0;
+  padding: 25px 0;
   background-color: #f8f8f8;
 }
-
-p.copyright {
+.aboutus {
+  text-align: center;
+  font-size: 18px;
+  font-weight: 400;
+}
+p.aboutus {
   margin: 15px 0 0;
 }
