--- a/static/css/main/style.less
+++ b/static/css/main/style.less
@@ -85,6 +85,7 @@ a:visited{
   text-align: center;
   background: url(../../icons/tile-2.jpg);
   background-size: cover;
+  color: rgba(255, 255, 255, 0);
 }
 
 .block.block-dice{
