moved the dice sprite to the right

--- a/static/css/main/style.less
+++ b/static/css/main/style.less
@@ -152,6 +152,9 @@ a:visited{
   background: url(../../icons/tile-right.jpg);
   background-size: cover;
 }
+.dice-layout {
+  margin: 15% 0% 0% 0%;
+}
 div#player {
   position: relative;
 }
