--- a/static/css/main/style.less
+++ b/static/css/main/style.less
@@ -153,6 +153,13 @@ a:visited{
   background: url(../../icons/tile-right.jpg);
   background-size: cover;
 }
+
+.winning-number-condition {
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-weight: 700;
+  font-size: 30px;
+  text-align: center;
+}
 .dice-layout {
   margin: 15% 0% 0% 0%;
 }
